feat:Card de peliculas y serie.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="bgOne">#000000</color>
+    <color name="bgOneRGBA">#54000000</color>
+    <color name="bgTwo">#3D0000</color>
+    <color name="bgThree">#950101</color>
+    <color name="bgFour">#FF0000</color>
+    <color name="bgGreen">#A84CAF50</color>
+    <color name="cText">#FFFFFF</color>
+    <color name="cTextDisabled">#F5F5F5</color>
+    <color name="cTextH1">@color/bgFour</color>
 </resources>
