--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,10 +1,16 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MegaPelis" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="Theme.MegaPelis" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/bgOne</item>
+        <item name="colorPrimaryVariant">@color/bgOne</item>
+        <item name="colorOnPrimary">@color/cText</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/bgTwo</item>
+        <item name="colorSecondaryVariant">@color/bgTwo</item>
+        <item name="colorOnSecondary">@color/cTextDisabled</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
 </resources>
