--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,13 +2,13 @@
     <!-- Base application theme. -->
     <style name="Theme.MegaPelis" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/bgOne</item>
-        <item name="colorPrimaryVariant">@color/bgOne</item>
-        <item name="colorOnPrimary">@color/cText</item>
+        <item name="colorPrimary">@color/bg_one</item>
+        <item name="colorPrimaryVariant">@color/bg_one</item>
+        <item name="colorOnPrimary">@color/c_text</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/bgTwo</item>
-        <item name="colorSecondaryVariant">@color/bgTwo</item>
-        <item name="colorOnSecondary">@color/cTextDisabled</item>
+        <item name="colorSecondary">@color/bg_two</item>
+        <item name="colorSecondaryVariant">@color/bg_two</item>
+        <item name="colorOnSecondary">@color/c_text_disabled</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
