--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.MegaPelis" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.MegaPelis" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/bg_one</item>
+        <item name="colorPrimary">@color/bg_four</item>
         <item name="colorPrimaryVariant">@color/bg_one</item>
         <item name="colorOnPrimary">@color/c_text</item>
         <!-- Secondary brand color. -->
