--- a/app/src/main/res/layout/layout_card_movie_serie.xml
+++ b/app/src/main/res/layout/layout_card_movie_serie.xml
@@ -3,10 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/card_serie_image"
-    android:layout_width="200dp"
-    android:layout_height="300dp"
+    android:layout_width="150dp"
+    android:layout_height="200dp"
     android:layout_margin="8dp">
-
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:ads="http://schemas.android.com/apk/res-auto"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -15,7 +14,6 @@
         android:layout_height="match_parent"
         android:background="@color/bg_one"
         android:orientation="horizontal">
-
         <ImageView
             android:id="@+id/card_movie_serie_image"
             android:layout_width="match_parent"
@@ -24,7 +22,6 @@
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/movie" >
         </ImageView>
-
         <TextView
             android:id="@+id/card_movie_serie_title"
             android:layout_width="match_parent"
@@ -43,9 +40,9 @@
             android:gravity="center"
             android:text="@string/card_txt_movie_serie_title"
             android:textColor="@color/c_text"
-            android:textSize="30dp"
+            android:fontFamily="@font/primary"
+            android:textSize="25dp"
             android:background="@color/bg_one_rgba"/>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -69,8 +66,9 @@
                 android:text="@string/card_txt_movie_serie_points"
                 android:textColor="@color/c_text"
                 android:background="@color/bg_green"
-                android:textSize="15dp"
+                android:textSize="12dp"
                 android:gravity="center"
+                android:fontFamily="@font/primary"
                 android:textAlignment="center"/>
         </LinearLayout>
     </RelativeLayout>
