--- a/app/src/main/res/layout/activity_home_user.xml
+++ b/app/src/main/res/layout/activity_home_user.xml
@@ -7,6 +7,6 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/bg_one"
-    tools:context=".api.activity.user.HomeUserActivity">
+    tools:context=".api.retrofit.model.activity.user.HomeUserActivity">
 
 </LinearLayout>
