--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,147 +7,134 @@
     android:orientation="vertical"
     android:background="@color/bg_one"
     tools:context=".app.activity.MainActivity">
-
-
-
     <ImageView
         android:id="@+id/iv_view_image_home_1"
         android:layout_width="170dp"
         android:layout_height="255dp"
         android:layout_marginEnd="248dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_1"
+        android:src="@drawable/movie_01"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_4"
         android:layout_width="163dp"
         android:layout_height="242dp"
         android:layout_marginEnd="248dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_4"
+        android:src="@drawable/movie_02"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
-
+        app:layout_constraintVertical_bias="0.498"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_7"
         android:layout_width="166dp"
         android:layout_height="255dp"
         android:layout_marginEnd="248dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_7"
+        android:src="@drawable/movie_03"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
-
+        app:layout_constraintVertical_bias="1.0"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_3"
-        android:layout_width="168dp"
+        android:layout_width="170dp"
         android:layout_height="255dp"
-        android:layout_marginStart="288dp"
+        android:layout_marginStart="258dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_3"
+        android:src="@drawable/serie_06"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
-
+        app:layout_constraintVertical_bias="0.0"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_10"
         android:layout_width="166dp"
         android:layout_height="275dp"
         android:layout_marginStart="244dp"
         android:layout_marginTop="476dp"
-
         android:baselineAligned="false"
-        android:src="@drawable/ic_image_home_10"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <ImageView
-        android:id="@+id/iv_view_image_home_6"
-        android:layout_width="168dp"
-        android:layout_height="242dp"
-        android:layout_marginStart="244dp"
-        android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_6"
+        android:src="@drawable/serie_03"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.521" />
-
+        android:contentDescription="@string/view_start_txt_image_description"/>
+    <ImageView
+        android:id="@+id/iv_view_image_home_6"
+        android:layout_width="166dp"
+        android:layout_height="275dp"
+        android:layout_marginStart="244dp"
+        android:baselineAligned="false"
+        android:src="@drawable/movie_05"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.521"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_2"
         android:layout_width="170dp"
-        android:layout_height="236dp"
+        android:layout_height="255dp"
         android:layout_marginBottom="568dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_2"
+        android:src="@drawable/movie_06"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent" />
-
+        app:layout_constraintStart_toStartOf="parent"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_5"
         android:layout_width="170dp"
         android:layout_height="255dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_5"
+        android:src="@drawable/serie_01"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.233" />
-
+        app:layout_constraintVertical_bias="0.233"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_8"
         android:layout_width="170dp"
         android:layout_height="255dp"
         android:baselineAligned="false"
-        android:src="@drawable/ic_image_home_8"
-
+        android:src="@drawable/serie_04"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.741" />
-
-
+        app:layout_constraintVertical_bias="0.741"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/iv_view_image_home_9"
         android:layout_width="170dp"
         android:layout_height="236dp"
         android:layout_marginTop="572dp"
         android:baselineAligned="false"
-
-        android:src="@drawable/ic_image_home_9"
+        android:src="@drawable/serie_05"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <TextView
         android:id="@+id/textView3"
         android:layout_width="439dp"
         android:layout_height="862dp"
         android:background="@color/bg_one_rgba"
+        android:fontFamily="@font/primary"
         android:text=""
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -155,7 +142,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0" />
-
     <androidx.constraintlayout.helper.widget.Flow
         android:id="@+id/flow2"
         android:layout_width="wrap_content"
@@ -164,14 +150,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
-
     <Button
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_button"
         android:backgroundTint="@color/bg_four"
-        android:text="Iniciar Sesión"
+        android:text="@string/view_start_txt_login_in"
+        android:fontFamily="@font/primary"
         android:textColor="@color/c_text"
         app:icon="@drawable/ic_icon_login"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -180,14 +166,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.836" />
-
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
         android:background="#00FFFFFF"
-        android:text="Registrate"
+        android:text="@string/view_start_txt_sign_in"
+        android:fontFamily="@font/primary"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -195,7 +181,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_view_image_home_8"
         app:layout_constraintVertical_bias="1.0" />
-
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
@@ -206,8 +191,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.312"
-        app:srcCompat="@drawable/letras_logo" />
-
+        app:srcCompat="@drawable/letras_logo"
+        android:contentDescription="@string/view_start_txt_image_description"/>
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="182dp"
@@ -218,9 +203,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.077"
-        app:srcCompat="@drawable/logo" />
-
-
-
-
+        app:srcCompat="@drawable/logo"
+        android:contentDescription="@string/view_start_txt_image_description"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
